--- a/PizzaWebsite/Pages/CreatePizza.cshtml
+++ b/PizzaWebsite/Pages/CreatePizza.cshtml
@@ -44,6 +44,6 @@
     <div asp-validation-summary="ModelOnly">
         <span>Please correct the following errors</span>
     </div>
-    <input class="btn btn-outline-dark" type="submit" value="Upload" />
+    <input class="btn btn-outline-danger" type="submit" value="Upload" />
 
 </form>
