--- a/PizzaWebsite/Pages/Menu.cshtml
+++ b/PizzaWebsite/Pages/Menu.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Menu";
 }
 
-<h1>Our Menu</h1>
+<h1 class="mt-5">Our Menu</h1>
 <div class="container">
     <div class="row my-5">
         @{
