--- a/PizzaWebsite/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/PizzaWebsite/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="mt-5">@ViewData["Title"]</h1>
 <h2>Enter your email.</h2>
 <hr />
 <div class="row">
@@ -12,11 +12,11 @@
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="E-mail" />
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-outline-danger my-5">Reset Password</button>
         </form>
     </div>
 </div>
