--- a/PizzaWebsite/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/PizzaWebsite/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Password confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="mt-5">@ViewData["Title"]</h1>
 <p>
     Please check your email to reset your password.
 </p>
