--- a/PizzaWebsite/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
+++ b/PizzaWebsite/Areas/Identity/Pages/Account/Manage/DeletePersonalData.cshtml
@@ -7,7 +7,7 @@
 
 <h3>@ViewData["Title"]</h3>
 
-<div class="alert alert-warning" role="alert">
+<div class="alert alert-danger" role="alert">
     <p>
         <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
     </p>
@@ -19,12 +19,12 @@
         @if (Model.RequirePassword)
         {
             <div class="form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
+                <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Password" />
                 <label asp-for="Input.Password" class="form-label"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
         }
-        <button class="w-100 btn btn-lg btn-danger" type="submit">Delete data and close my account</button>
+        <button class="w-100 btn btn-lg btn-danger my-5" type="submit">Delete data and close my account</button>
     </form>
 </div>
 
