--- a/PizzaWebsite/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
+++ b/PizzaWebsite/Areas/Identity/Pages/Account/Manage/PersonalData.cshtml
@@ -5,7 +5,7 @@
     ViewData["ActivePage"] = ManageNavPages.PersonalData;
 }
 
-<h3>@ViewData["Title"]</h3>
+<h3 class="mt-5">@ViewData["Title"]</h3>
 
 <div class="row">
     <div class="col-md-6">
@@ -14,7 +14,7 @@
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
         <form id="download-data" asp-page="DownloadPersonalData" method="post">
-            <button class="btn btn-primary" type="submit">Download</button>
+            <button class="btn btn-outline-danger my-3" type="submit">Download</button>
         </form>
         <p>
             <a id="delete" asp-page="DeletePersonalData" class="btn btn-danger">Delete</a>
