--- a/PizzaWebsite/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/PizzaWebsite/Areas/Identity/Pages/Account/ResendEmailConfirmation.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Resend email confirmation";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1 class="mt-5">@ViewData["Title"]</h1>
 <h2>Enter your email.</h2>
 <hr />
 <div class="row">
@@ -16,7 +16,7 @@
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Resend</button>
+            <button type="submit" class="w-100 btn btn-lg btn-outline-danger my-5">Resend</button>
         </form>
     </div>
 </div>
