--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -75,7 +75,7 @@
             }
         }
     <div class="my-5">
-        <p p-0>See more in <a asp-page="/Menu">Offers</a></p>
+        <p p-0>See more in <a asp-page="/Offers">Offers</a></p>
     </div>
 </div>
 </div>
