--- a/PizzaWebsite/Pages/Shared/_Layout.cshtml
+++ b/PizzaWebsite/Pages/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                             <a class="nav-link text-light" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item mx-3">
-                            <a class="nav-link text-light" asp-page="/Menu">Offers</a>
+                            <a class="nav-link text-light" asp-page="/Offers">Offers</a>
                         </li>
                         <li class="nav-item mx-3">
                             <a class="nav-link text-light" asp-page="/Menu">Menu</a>
