--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -4,7 +4,23 @@
     ViewData["Title"] = "Home page";
 }
 
-
+<div class="modal fade productinfo"tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Хуйня</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+            </div>
+            <div class="modal-body">
+                Надо переделать на джаваскрипт
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Поссать</button>
+                <button type="button" class="btn btn-primary">Покакать</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <main id="bgc">
     <div class="carousel slide mb-5 " id="carouselControls" data-bs-ride="carousel">
@@ -55,23 +71,23 @@
         @{
             foreach (var pizza in Model.SpecialPizzas)
             {
-                <div class="col-md-3 col-sm-12 text-center " style="display:flex; justify-content: center;">
-                    <div class="card scale shadow-sm " style="width: 18rem;">
-                        <img src="~/img/pizza-images/@pizza.ImageLocation" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">@pizza.Name</h5>
-                            <p class="card-text">@pizza.Ingredients</p>
-                            <div class="row mt-5 mb-2">
-                                <div class="col-md-6">
-                                    <a asp-page="/ViewPizza" asp-route-id="@pizza.PizzaId" class="btn rbtn  btn-outline-danger btn-lg">Choose</a>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="price my-4"><h6>@pizza.Price $</h6></div>
+                    <div class="col-md-3 col-sm-12 text-center " style="display:flex; justify-content: center;">
+                        <div class="card scale shadow-sm " style="width: 18rem;">
+                            <img src="~/img/pizza-images/@pizza.ImageLocation" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">@pizza.Name</h5>
+                                <p class="card-text">@pizza.Ingredients</p>
+                                <div class="row mt-5 mb-2">
+                                    <div class="col-md-6">
+                                        <a asp-page="/ViewPizza" asp-route-id="@pizza.PizzaId" class="btn rbtn  btn-outline-danger btn-lg" data-bs-toggle="modal" data-bs-target=".productinfo">Choose</a>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="price my-4"><h6>@pizza.Price $</h6></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
             }
         }
     <div class="my-5">
