--- a/PizzaWebsite/Pages/ViewPizza.cshtml
+++ b/PizzaWebsite/Pages/ViewPizza.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "ViewPizza";
 }
 
-<h1 style="margin-top:3rem;">ViewPizza</h1>
+<h1>ViewPizza</h1>
 
 <div>
     <h4>Pizza</h4>
