--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -16,7 +16,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Поссать</button>
-                <button type="button" class="btn btn-primary">Покакать</button>
+                <button type="button" class="btn btn-outline-danger">Покакать</button>
             </div>
         </div>
     </div>
