--- a/PizzaWebsite/Pages/Shared/_Layout.cshtml
+++ b/PizzaWebsite/Pages/Shared/_Layout.cshtml
@@ -43,8 +43,8 @@
             </div>
         </div>
     </nav>
-    <header class="sticky-top">
-        <nav style=" background-color:#ad2122;" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow">
+    <header class="sticky-top mt-0">
+        <nav style=" background-color:#ad2122;" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow my-0">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index"><img class="pb-100" id="startIcon" src="~/img/Icon.png"/></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
