--- a/PizzaWebsite/Pages/Shared/_Layout.cshtml
+++ b/PizzaWebsite/Pages/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="~/Menu.cshtml.css" asp-append-version="true" />
 </head>
 <body>
-    <nav style=" background-color:maroon; height:5%;" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow ">
+    <nav style=" background-color:maroon; height:5%;" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark box-shadow px-3">
         <div class="container">
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
