--- a/PizzaWebsite/wwwroot/css/site.css
+++ b/PizzaWebsite/wwwroot/css/site.css
@@ -62,6 +62,7 @@ a:hover {
 
 a {
     color: #212529;
+    text-decoration:none;
 }
 #startIcon{
     height:40px;
@@ -104,4 +105,31 @@ h6{
 }
 .form-control{
     border-radius:18px;
+}
+
+.modal-figure {
+    padding: 5rem 1rem;
+    
+}
+.modal-figure img{
+    height:30rem;
+    width:auto;
+
+}
+
+.modal-body {
+    display: flex;
+    padding: 0;
+}
+.modal-body div{
+    width:50%;
+    position:relative;
+}
+    .modal-ai-content{
+        background:white;
+        
+        
+    }
+.order-choose-modal{
+    
 }
