--- a/PizzaWebsite/wwwroot/css/site.css
+++ b/PizzaWebsite/wwwroot/css/site.css
@@ -7,7 +7,11 @@ html {
     font-size: 16px;
   }
 }
-
+@media (max-width: 575px) {
+  .fstheader {
+    padding:0;
+  }
+}
 html {
   position: relative;
   min-height: 100%;
