--- a/PizzaWebsite/Pages/ViewPizza.cshtml
+++ b/PizzaWebsite/Pages/ViewPizza.cshtml
@@ -11,6 +11,9 @@
     <hr/>
     <dl class="row">
         <dt class="col-sm-2">
+            <img src="~/img/pizza-images/@Model.Pizza.BackGroundImageLocation" alt="...">
+        </dt>
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Pizza.Name)
         </dt>
         <dd class="col-sm-10">
