head admin added

--- a/PizzaWebsite/Pages/CreatePizza.cshtml
+++ b/PizzaWebsite/Pages/CreatePizza.cshtml
@@ -34,11 +34,11 @@
     </dl>
     <dl>
         <dt>
-            <label asp-for="Input.Image"></label>
+            <label asp-for="Input.FrontImage"></label>
         </dt>
         <dd>
-            <input asp-for="Input.Image" type="file">
-            <span asp-validation-for="Input.Image"></span>
+            <input asp-for="Input.FrontImage" type="file">
+            <span asp-validation-for="Input.FrontImage"></span>
         </dd>
         <dt>
             <label asp-for="Input.BackgroundImage"></label>
