--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -4,24 +4,6 @@
     ViewData["Title"] = "Home page";
 }
 
-<!--
-<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2>Pizza Name</h2>
-                <p>ingrewesdifjkjdksjfksdkjfsksfkdlj</p>
-                <div class="order-sett">
-                    <h3>Price</h3>
-                    <button type="button" class="btn rbtn  btn-outline-danger"></button>
-                </div>
-            </div>
-            <div class="modal-figure">
-                <img class="w-100" src="/img/istockphoto-1192094401-612x612.jpg" />
-            </div>
-            <div class="modal-body">
-                <div></div>
-                <div class="modal-ai-content">
 
 
 <main id="bgc">
@@ -93,10 +75,14 @@
                                     <article>
                                         <p>@pizza.Ingredients</p>
                                     </article>
-                                    <div class="d-flex align-content-center">
-                                        <input class="mx-2 d-flex" type="number">
-                                        <h4 class="mx-2">@pizza.Price</h4>
-                                        <button class="mx-2 btn btn-outline-danger">Order</button>
+                                    <div class="d-flex">
+                                        <div class="modal-input d-flex ">
+                                            <button class="decrement-btn" ><strong>-</strong></button>
+                                            <label class="input-value">1</label>
+                                            <button class="increment-btn"><strong>+</strong></button>
+                                        </div>
+                                        <h4 class="m-3 module-price  px-2">@pizza.Price$</h4>
+                                        <button class="mx-2 btn btn-outline-danger pizza-order-btn px-3">Order</button>
                                     </div>
                                     <hr>
                                     <div class="d-flex  align-content-center">
@@ -127,7 +113,7 @@
                         <div class="card-body offer-card-body">
                             <h5 class="card-title">@pizza.Name</h5>
                             <p class="card-text">@pizza.Ingredients</p>
-                            <div class="price my-4"><h6>@pizza.Price $</h6></div>
+                            <div class="price my-4"><h6>@pizza.Price$</h6></div>
                         </div>
                     </div>
                     </a>
