fixed teammate's errors

--- a/PizzaWebsite/Pages/Index.cshtml
+++ b/PizzaWebsite/Pages/Index.cshtml
@@ -77,9 +77,9 @@
                                     </article>
                                     <div class="d-flex">
                                         <div class="modal-input d-flex ">
-                                            <button class="decrement-btn" ><strong>-</strong></button>
-                                            <label class="input-value">1</label>
-                                            <button class="increment-btn"><strong>+</strong></button>
+                                            <button class="decrement-btn" id="decrement-id-@pizza.PizzaId"><strong>-</strong></button>
+                                            <label class="input-value" id="button-value-@pizza.PizzaId">1</label>
+                                            <button class="increment-btn" id="increment-id-@pizza.PizzaId"><strong>+</strong></button>
                                         </div>
                                         <h4 class="m-3 module-price  px-2">@pizza.Price$</h4>
                                         <button class="mx-2 btn btn-outline-danger pizza-order-btn px-3">Order</button>
