--- a/PizzaWebsite/Pages/CreatePizza.cshtml
+++ b/PizzaWebsite/Pages/CreatePizza.cshtml
@@ -56,7 +56,7 @@
         </dd>
     </dl>
     <div asp-validation-summary="ModelOnly">
-        <span>Please correct the following errors</span>
+        <span>Please correct the following errors</span>]
     </div>
     <input class="btn btn-outline-danger" type="submit" value="Upload" />
 
