--- a/PizzaWebsite/Pages/Menu.cshtml
+++ b/PizzaWebsite/Pages/Menu.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{pageIndex=1}/{pizzasPerPage=12}/{SortingChoice=Random}"
+﻿@page
 @model PizzaWebsite.Pages.MenuModel
 @{
     ViewData["Title"] = "Menu";
@@ -7,8 +7,24 @@
 <h1 class="mt-5">Our Menu</h1>
 <div class="container">
     <form method="post">
-        <select asp-for="SortingChoice" asp-items="Html.GetEnumSelectList<SortMethod>()"></select>
-        <input class="btn btn-outline-danger" type="submit" value="Sort" />
+        <dl>
+            <dt>
+                <label name="pageIndex"></label>
+            </dt>
+            <dd>
+                <input name="pageIndex" type="number">
+            </dd>
+            <dt>
+                <label name="pizzasPerPage"></label>
+            </dt>
+            <dd>
+                <input name="pizzasPerPage" type="number">
+            </dd>
+            <dd>
+                <select asp-for="SortingChoice" asp-items="Html.GetEnumSelectList<SortMethod>()"></select>
+                <input class="btn btn-outline-danger" type="submit" value="Sort" />
+            </dd>
+        </dl>
     </form>
     <form method="post">
         <input class="btn-dark" asp-page-handler="Fill" type="submit" value="Fill with test pizzas"/>
